--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -30,10 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  http: ^0.13.3
   cupertino_icons: ^1.0.6
   shared_preferences: ^2.0.11
 
