Docker compose update

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,10 @@ services:
   homeassistant:
     container_name: homeassistant
     image: homeassistant/home-assistant:latest
-    ports:
-      - "8123:8123"
+#    ports:
+#      - "8123:8123"
     volumes:
       - ./homeassistant/config:/config
     restart: unless-stopped
-#    privileged: true
-#    network_mode: host
+    privileged: true
+    network_mode: host
