--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,8 @@ services:
   db:
     image: postgres:13
     container_name: postgres-db
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: preferences_db
+    env_file:
+      - example.env # Change to .env and add your own credentials
     ports:
       - "5432:5432"
     volumes:
