Fixed sensor serialization

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -17,5 +17,13 @@ services:
     depends_on:
       - db
 
+  pgadmin:
+    image: dpage/pgadmin4
+    environment:
+      PGADMIN_DEFAULT_EMAIL: user@domain.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    ports:
+      - "5050:80"
+
 volumes:
   postgres_data:
