--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: postgres:13
     container_name: postgres-db
     env_file:
-      - example.env # Change to .env and add your own credentials
+      - .env
     ports:
       - "5432:5432"
     volumes:
@@ -16,7 +16,16 @@ services:
       timeout: 3s
       retries: 3
 
-  backend:
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
+    ports:
+      - "5050:80"
+
+  api:
     build: ./backend
     container_name: api
     ports:
