--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,6 +2,8 @@ FROM python:3.10-slim
 
 WORKDIR /app
 
+RUN apt update && apt install ffmpeg -y
+
 COPY ./requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 
