--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -35,6 +35,7 @@ pydub==0.25.1
 python-dotenv==1.0.1
 requests==2.32.3
 requests-cache==0.9.8
+simpleaudio==1.0.4
 simplejson==3.19.2
 six==1.16.0
 SQLAlchemy==2.0.30
