--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ aiohttp-client-cache==0.11.0
 aiosignal==1.3.1
 annotated-types==0.7.0
 appdirs==1.4.4
+APScheduler==3.10.4
 async-timeout==4.0.3
 attrs==23.2.0
 blinker==1.8.2
@@ -33,6 +34,7 @@ pydantic==2.7.2
 pydantic_core==2.18.3
 pydub==0.25.1
 python-dotenv==1.0.1
+pytz==2024.1
 requests==2.32.3
 requests-cache==0.9.8
 simpleaudio==1.0.4
@@ -40,6 +42,7 @@ simplejson==3.19.2
 six==1.16.0
 SQLAlchemy==2.0.30
 typing_extensions==4.12.0
+tzlocal==5.2
 url-normalize==1.4.3
 urllib3==2.2.1
 websockets==12.0
