Added pgadmin and swagger instructions to readme

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,12 +1,12 @@
 FROM python:3.10-slim
 
+RUN apt-get update && apt-get install -y gcc libasound2-dev
+
+COPY requirements.txt /app/requirements.txt
 WORKDIR /app
-
-RUN apt update && apt install ffmpeg -y
-
-COPY ./requirements.txt requirements.txt
+RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
-COPY . .
+COPY . /app
 
 CMD ["flask", "run", "--host=0.0.0.0"]
