--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -2,9 +2,9 @@ services:
   db:
     image: postgres:13
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: preferences_db
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: user
+      POSTGRES_DB: dev_smart_home_db
     ports:
       - "5432:5432"
     volumes:
