Update api dockerfile

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.10-slim
 
 WORKDIR /app
 
-RUN apt update && apt install ffmpeg -y
+RUN apt update && apt install -y ffmpeg libasound2-dev build-essential
 
 COPY ./requirements.txt requirements.txt
 RUN pip install -r requirements.txt
