--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,12 +28,18 @@ services:
   api:
     build: ./backend
     container_name: api
+    env_file:
+      - .env
     ports:
       - "5000:5000"
     volumes:
       - ./backend:/app
       # - /dev/snd:/dev/snd
-    # privileged: true
+    privileged: true
+    # network_mode: host
+    extra_hosts:
+      # - "host.docker.internal:host-gateway"
+      - "${HA_IP_ADDRESS}:host-gateway"
     # devices:
     #   - /dev/snd:/dev/snd
     depends_on:
