--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,6 +14,7 @@ charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 exceptiongroup==1.2.1
+flasgger==0.9.7.1
 Flask==3.0.3
 Flask-SQLAlchemy==3.1.1
 frozenlist==1.4.1
@@ -23,11 +24,15 @@ HomeAssistant-API==4.2.2.post1
 idna==3.7
 itsdangerous==2.2.0
 Jinja2==3.1.4
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
 llamaapi==0.1.36
 MarkupSafe==2.1.5
+mistune==3.0.2
 multidict==6.0.5
 mutagen==1.47.0
 nest-asyncio==1.6.0
+packaging==24.0
 playsound==1.3.0
 psycopg2-binary==2.9.9
 pycryptodomex==3.20.0
@@ -36,8 +41,11 @@ pydantic_core==2.18.3
 pydub==0.25.1
 python-dotenv==1.0.1
 pytz==2024.1
+PyYAML==6.0.1
+referencing==0.35.1
 requests==2.32.3
 requests-cache==0.9.8
+rpds-py==0.18.1
 simpleaudio==1.0.4
 simplejson==3.19.2
 six==1.16.0
@@ -49,5 +57,4 @@ urllib3==2.2.1
 websockets==12.0
 Werkzeug==3.0.3
 yarl==1.9.4
-flasgger~=0.9.7.1
 yt-dlp==2024.5.27
